# poppy

./: LICENSE  README.md  pyproject.toml
src/poppy/: alnkit.py  extract_seq.py  faskit.py  flag_summary.py  gensh.py  initialize.py  mapping_summary.py  plink2treemix.py  plink2treemx.py  poppy.py  remove_invariant_site.py  summary_main.py  vcf_count.py  vcf_select.py  vcf_summary.py  vcfkit.py
tests/data/: sample.aln.phy  sample.varsites.fa  sample.vcf
